# carapace-spec-clap

./: AGENTS.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: dependabot.yml  rust.yml
examples/: carapace_spec.rs  git.rs
src/: carapace_spec.rs  lib.rs
tests/: carapace_spec.rs  common.rs
tests/snapshots/: aliases.yaml  basic.yaml  default_values.yaml  extended_notation.yaml  feature_sample.yaml  inherited_flag_completion.yaml  inherited_persistent_completion.yaml  quoting.yaml  special_commands.yaml  sub_subcommands.yaml  value_hint.yaml
