[package]
name = "carapace_spec_clap"
description = "spec generation for clap-rs/clap"
version = "0.1.0-PLACEHOLDER"
edition = "2021"
repository = "https://github.com/carapace-sh/carapace-spec-clap"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["cli", "completion", "clap", "carapace"]

[lib]

[dependencies]
clap = { version = "4.5.48", default-features = false, features = ["std"] }
clap_complete = { version = "4.5.57" }
indexmap = {version = "2.11.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"

[dev-dependencies]
snapbox = { version = "0.6", features = ["diff"] }
